--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1> Bem-vindo ao ScoreCenter !</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Estatísticas de Futebol</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="jogos.html">Jogos</a></li>
+                <li><a href="campeonatos.html">Campeonatos</a></li>
+            </ul>
+        </nav>
+        <div class="container-index">
+            <div class="banner">
+                <img src="banner.jpg" alt="Banner do site com informações sobre futebol">
+            </div>
+        </div>
+    </body>
 </html>
